trunk/Archive2/33/57fbdd3f17851b/output
main.cpp:12:5: error: static_assert failed
    static_assert(test("zyx"));
    ^             ~~~~~~~~~~~
1 error generated.
